--- a/index.html
+++ b/index.html
@@ -7,14 +7,28 @@
 </head>
 <body>
 	<div class="container">
-		<div class="section">
+<!-- 		<div class="section">
 			<button class="btn" id="boton">AJAX</button>
 		</div>
 		<div class="section" id="respuesta">
 			
+		</div> -->
+		<div class="section">
+			<div class="btn" id="btn-json">JSON</div>
+			<table>
+				<thead>
+					<tr>
+						<th>Titulo</th>
+						<th>Artista</th>
+					</tr>
+				</thead>
+				<tbody id='respuesta'>
+					
+				</tbody>
+			</table>
 		</div>
 	</div>
-	<script src="script.js"></script>
+	<script src="script2.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 </body>
 </html>
